--- a/u04-07/u04_기본문법.ipynb
+++ b/u04-07/u04_기본문법.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "u04_기본문법.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,7 +19,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zJocZXf4cmyp"
+        "id": "rnOhIE-za2f8"
       },
       "source": [
         "# Unit 4. 기본 문법 알아보기"
@@ -27,7 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UCE4C1WYcwlT"
+        "id": "opKIYaOza-Vn"
       },
       "source": [
         "## 4.1 세미콜론"
@@ -39,13 +40,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "HHo5-lEWazJd",
-        "outputId": "3d8dfb20-ed9f-4c33-c65e-865987625ed5"
+        "id": "9Y278reuaxv6",
+        "outputId": "6ccc38e6-8dac-4e25-a8fc-df2232145f77"
       },
       "source": [
         "print('Hello, world!')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,13 +63,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "LgKwDD5PbSMp",
-        "outputId": "4db60dd6-70bc-4e26-b915-b589bc83a903"
+        "id": "EMe6TOMybRMv",
+        "outputId": "b238c643-cdea-4463-e238-35f02587fc97"
       },
       "source": [
         "print('Hello'); print('1234')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +84,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "S_WbboMgfquS"
+        "id": "llXVyJ2bbuIV"
       },
       "source": [
         "## 4.2 주석"
@@ -92,7 +93,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sfi5WLV7b-cl"
+        "id": "_c1Qdy1nb4fq"
       },
       "source": [
         "### 4.2.1 한 줄 주석"
@@ -104,14 +105,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "4ConjVcQcVSh",
-        "outputId": "88fdae7a-d757-46e4-d3ef-d7d5168b64a6"
+        "id": "a5tNePEZbhqG",
+        "outputId": "a74c66da-a686-4c65-aed2-e164802386e7"
       },
       "source": [
         "# Hello, world! 출력\n",
         "print('Hello, world!')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,13 +129,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "zK7NazIdcdRY",
-        "outputId": "bb31554e-b058-4a87-9a9c-7b53cdd3de6e"
+        "id": "wO4OhxRPcIKZ",
+        "outputId": "d6e21222-b12a-42bd-8998-72de2c3e9a48"
       },
       "source": [
-        "print('Hello, world!')  # comment"
+        "print('Hello, world!')      # comment"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +149,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VUisKe4tevhS"
+        "id": "FAQbhUOKenz-"
       },
       "source": [
         "### 4.2.2 블록 주석"
@@ -157,14 +158,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L54oFTUze1l0"
+        "id": "_oFerzM2cTdU"
       },
       "source": [
         "# 더하기\n",
         "# a = 1 + 2\n",
         "# print('Hello, world!')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,15 +175,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "id": "R1Xwk8hve9P6",
-        "outputId": "30787a1b-2ea9-4aa0-989f-fa59cce794d8"
+        "id": "yQbJSejte5wC",
+        "outputId": "61779cec-0990-4249-ddd2-9350522066d8"
       },
       "source": [
         "# 더하기\n",
         "'''a = 1 + 2\n",
         "print('Hello, world!')'''"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +198,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -208,15 +209,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "id": "xJsaPckyf20f",
-        "outputId": "b390b9e7-e088-467e-f505-a921f7dc5946"
+        "id": "gsUQk5t_fGJW",
+        "outputId": "fe9eec82-2ba2-468a-b75d-3fddcb3d98b7"
       },
       "source": [
         "\"\"\"\n",
-        "이곳이 주석\n",
+        "이 안에 포함된 내용이 블록 주석\n",
         "\"\"\""
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,20 +226,20 @@
               "type": "string"
             },
             "text/plain": [
-              "'\\n이곳이 주석\\n'"
+              "'\\n이 안에 포함된 내용이 블록 주석\\n'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rC_0pxf4byCG"
+        "id": "pnRhBzNKiSO2"
       },
       "source": [
         "## 4.3 들여쓰기 (Indentation)"
@@ -247,15 +248,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tJ91aa96isQN"
+        "id": "yuf3cvMBfUQp"
       },
       "source": [
-        "\"\"\" C프로그래밍 예\n",
+        "\"\"\" C 프로그래밍 예\n",
         "sum = 0;\n",
         "for (i=1; i<=10; i++) {\n",
-        "  sum += i;\n",
+        "    sum += i;\n",
         "}\n",
-        "print(sum);\n",
+        "printf(sum);\n",
         "\"\"\""
       ],
       "execution_count": null,
@@ -267,17 +268,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "gLnEgKKQjNH6",
-        "outputId": "5232202c-5100-4bac-ced7-bb235b62da21"
+        "id": "gy_9otUJjGS3",
+        "outputId": "b66271f7-e0d7-415b-b02b-2578395fcbbf"
       },
       "source": [
         "# 파이썬 예\n",
         "sum = 0\n",
-        "for i in range(1, 11):\n",
-        "  sum += i\n",
+        "for i in range(1,11):\n",
+        "    sum += i\n",
         "print(sum)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,6 +288,48 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2CvkzmMqjpBH",
+        "outputId": "06b09b5d-61c8-48f9-9019-e97303feeafc"
+      },
+      "source": [
+        "# 기본 공백: 공백 4개, 탭/백탭(Shift+TAB)\n",
+        "sum = 0\n",
+        "for i in range(1,11):\n",
+        "    sum += i\n",
+        "    if (i >9):\n",
+        "        print(i)\n",
+        "\n",
+        "print(sum)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "55\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8IHkqlz6kAgg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
