--- a/u04-07/심사문제06.ipynb
+++ b/u04-07/심사문제06.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "source": [
     "kor, eng, mat, sci = map(int, input('국어, 영어, 수학, 과학 점수> ').split())"
    ],
@@ -186,7 +186,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "\"\"\" 표준 입력으로 국어, 영어, 수학, 과학 점수가 입력됩니다.<br>\r\n",
+    "평균 점수를 출력하는 프로그램을 만드세요(input에서 안내 문자열은 출력하지 않아야 합니다).<br>\r\n",
+    "단, 평균 점수를 출력할 때는 소수점 이하 자리는 버립니다(정수로 출력). \"\"\""
+   ],
    "outputs": [],
    "metadata": {}
   }
