파이썬 자료형

--- a/u08-12/u12_딕셔너리.ipynb
+++ b/u08-12/u12_딕셔너리.ipynb
@@ -656,9 +656,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5h5UtprVfLvW"
+      },
+      "source": [
+        "### 질문에 대한 답변"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "0TtfIPNhbHGT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0TtfIPNhbHGT",
+        "outputId": "64cc8011-0843-4c9e-cfea-e9f363c44ba8"
+      },
+      "source": [
+        "# 'mana' 항목이 존재하면 기존 값 + 100, 없으면 값이 50이 되게 만드시오\n",
+        "d = {'mana': 120}\n",
+        "e = {}\n",
+        "\n",
+        "for item in [d, e]:\n",
+        "    if 'mana' in item:\n",
+        "        item['mana'] = item['mana'] + 100\n",
+        "    else:\n",
+        "        item['mana'] = 50\n",
+        "\n",
+        "d, e"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "({'mana': 220}, {'mana': 50})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-JhEIpbcfnP0"
       },
       "source": [
         ""
